// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes.vue - vue-verify 1`] = `
<div
  v-for="  item  in  items "
  v-for="  item  of  items "
  v-for="(    item    , index)    in    items"
  v-for="value    in     object"
  v-for="(value,    key)    in    object"
  v-for="(value,    key)    of    object"
  v-for="(value  ,   key,   index)    in   object"
  v-for="   n    in   evenNumbers"
  v-for=" n in even   ( numbers) "
  v-for=" n    in    10"
  v-for=" { a }    in    [0].map(()=>({a:1}))   "
  v-for=" ({ a }, [c  ])    in    [0].map(()=>1)   "
  v-for=" n in items.map(x => { return x }) "
  @click="  /* hello */   "
  @click="   /* 1 */ $emit( /* 2 */ 'click' /* 3 */ ) /* 4 */ ; /* 5 */   "
  @click="   $emit(   'click'   )   "
  @click="   $emit(   'click'   )  ;"
  @click="   $emit(   'click'   )  ;if(something){for(let i=j;i<100;i++){}}else{}"
  slot-scope="{destructuring:{a:{b}}}"
></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div
  v-for="item in items"
  v-for="item of items"
  v-for="(item, index) in items"
  v-for="value in object"
  v-for="(value, key) in object"
  v-for="(value, key) of object"
  v-for="(value, key, index) in object"
  v-for="n in evenNumbers"
  v-for="n in even(numbers)"
  v-for="n in 10"
  v-for="{ a } in [0].map(() => ({ a: 1 }))"
  v-for="({ a }, [c]) in [0].map(() => 1)"
  v-for="n in items.map(x => {
    return x;
  })"
  @click="/* hello */"
  @click="/* 1 */ $emit(/* 2 */ 'click' /* 3 */) /* 4 */; /* 5 */"
  @click="$emit('click');"
  @click="$emit('click');"
  @click="
    $emit('click');
    if (something) {
      for (let i = j; i < 100; i++) {}
    } else {
    }
  "
  slot-scope="{
    destructuring: {
      a: { b }
    }
  }"
></div>

`;

exports[`attributes.vue - vue-verify 2`] = `
<div
  v-for="  item  in  items "
  v-for="  item  of  items "
  v-for="(    item    , index)    in    items"
  v-for="value    in     object"
  v-for="(value,    key)    in    object"
  v-for="(value,    key)    of    object"
  v-for="(value  ,   key,   index)    in   object"
  v-for="   n    in   evenNumbers"
  v-for=" n in even   ( numbers) "
  v-for=" n    in    10"
  v-for=" { a }    in    [0].map(()=>({a:1}))   "
  v-for=" ({ a }, [c  ])    in    [0].map(()=>1)   "
  v-for=" n in items.map(x => { return x }) "
  @click="  /* hello */   "
  @click="   /* 1 */ $emit( /* 2 */ 'click' /* 3 */ ) /* 4 */ ; /* 5 */   "
  @click="   $emit(   'click'   )   "
  @click="   $emit(   'click'   )  ;"
  @click="   $emit(   'click'   )  ;if(something){for(let i=j;i<100;i++){}}else{}"
  slot-scope="{destructuring:{a:{b}}}"
></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div
  v-for="item in items"
  v-for="item of items"
  v-for="(item, index) in items"
  v-for="value in object"
  v-for="(value, key) in object"
  v-for="(value, key) of object"
  v-for="(value, key, index) in object"
  v-for="n in evenNumbers"
  v-for="n in even(numbers)"
  v-for="n in 10"
  v-for="{ a } in [0].map(() => ({ a: 1 }))"
  v-for="({ a }, [c]) in [0].map(() => 1)"
  v-for="n in items.map(x => {
    return x;
  })"
  @click="/* hello */"
  @click="/* 1 */ $emit(/* 2 */ 'click' /* 3 */) /* 4 */; /* 5 */"
  @click="$emit('click');"
  @click="$emit('click');"
  @click="
    $emit('click');
    if (something) {
      for (let i = j; i < 100; i++) {}
    } else {
    }
  "
  slot-scope="{
    destructuring: {
      a: { b },
    },
  }"
></div>

`;

exports[`board_card.vue - vue-verify 1`] = `
<script>
import './issue_card_inner';
import eventHub from '../eventhub';

const Store = gl.issueBoards.BoardsStore;

export default {
  name: 'BoardsIssueCard',
  components: {
    'issue-card-inner': gl.issueBoards.IssueCardInner,
  },
  props: {
    list: Object,
    issue: Object,
    issueLinkBase: String,
    disabled: Boolean,
    index: Number,
    rootPath: String,
  },
  data() {
    return {
      showDetail: false,
      detailIssue: Store.detail,
    };
  },
  computed: {
    issueDetailVisible() {
      return (
        this.detailIssue.issue && this.detailIssue.issue.id === this.issue.id
      );
    },
  },
  methods: {
    mouseDown() {
      this.showDetail = true;
    },
    mouseMove() {
      this.showDetail = false;
    },
    showIssue(e) {
      if (e.target.classList.contains('js-no-trigger')) return;

      if (this.showDetail) {
        this.showDetail = false;

        if (Store.detail.issue && Store.detail.issue.id === this.issue.id) {
          eventHub.$emit('clearDetailIssue');
        } else {
          eventHub.$emit('newDetailIssue', this.issue);
          Store.detail.list = this.list;
        }
      }
    },
  },
};
</script>

<template>
  <li class="card"
    :class="{ 'user-can-drag': !disabled && issue.id, 'is-disabled': disabled || !issue.id, 'is-active': issueDetailVisible }"
    :index="index"
    :data-issue-id="issue.id"
    @mousedown="mouseDown"
    @mousemove="mouseMove"
    @mouseup="showIssue($event)">
    <issue-card-inner
      :list="list"
      :issue="issue"
      :issue-link-base="issueLinkBase"
      :root-path="rootPath"
      :update-filters="true" />
  </li>
</template>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script>
import "./issue_card_inner";
import eventHub from "../eventhub";

const Store = gl.issueBoards.BoardsStore;

export default {
  name: "BoardsIssueCard",
  components: {
    "issue-card-inner": gl.issueBoards.IssueCardInner
  },
  props: {
    list: Object,
    issue: Object,
    issueLinkBase: String,
    disabled: Boolean,
    index: Number,
    rootPath: String
  },
  data() {
    return {
      showDetail: false,
      detailIssue: Store.detail
    };
  },
  computed: {
    issueDetailVisible() {
      return (
        this.detailIssue.issue && this.detailIssue.issue.id === this.issue.id
      );
    }
  },
  methods: {
    mouseDown() {
      this.showDetail = true;
    },
    mouseMove() {
      this.showDetail = false;
    },
    showIssue(e) {
      if (e.target.classList.contains("js-no-trigger")) return;

      if (this.showDetail) {
        this.showDetail = false;

        if (Store.detail.issue && Store.detail.issue.id === this.issue.id) {
          eventHub.$emit("clearDetailIssue");
        } else {
          eventHub.$emit("newDetailIssue", this.issue);
          Store.detail.list = this.list;
        }
      }
    }
  }
};
</script>

<template>
  <li
    class="card"
    :class="{
      'user-can-drag': !disabled && issue.id,
      'is-disabled': disabled || !issue.id,
      'is-active': issueDetailVisible
    }"
    :index="index"
    :data-issue-id="issue.id"
    @mousedown="mouseDown"
    @mousemove="mouseMove"
    @mouseup="showIssue($event);"
  >
    <issue-card-inner
      :list="list"
      :issue="issue"
      :issue-link-base="issueLinkBase"
      :root-path="rootPath"
      :update-filters="true"
    />
  </li>
</template>

`;

exports[`board_card.vue - vue-verify 2`] = `
<script>
import './issue_card_inner';
import eventHub from '../eventhub';

const Store = gl.issueBoards.BoardsStore;

export default {
  name: 'BoardsIssueCard',
  components: {
    'issue-card-inner': gl.issueBoards.IssueCardInner,
  },
  props: {
    list: Object,
    issue: Object,
    issueLinkBase: String,
    disabled: Boolean,
    index: Number,
    rootPath: String,
  },
  data() {
    return {
      showDetail: false,
      detailIssue: Store.detail,
    };
  },
  computed: {
    issueDetailVisible() {
      return (
        this.detailIssue.issue && this.detailIssue.issue.id === this.issue.id
      );
    },
  },
  methods: {
    mouseDown() {
      this.showDetail = true;
    },
    mouseMove() {
      this.showDetail = false;
    },
    showIssue(e) {
      if (e.target.classList.contains('js-no-trigger')) return;

      if (this.showDetail) {
        this.showDetail = false;

        if (Store.detail.issue && Store.detail.issue.id === this.issue.id) {
          eventHub.$emit('clearDetailIssue');
        } else {
          eventHub.$emit('newDetailIssue', this.issue);
          Store.detail.list = this.list;
        }
      }
    },
  },
};
</script>

<template>
  <li class="card"
    :class="{ 'user-can-drag': !disabled && issue.id, 'is-disabled': disabled || !issue.id, 'is-active': issueDetailVisible }"
    :index="index"
    :data-issue-id="issue.id"
    @mousedown="mouseDown"
    @mousemove="mouseMove"
    @mouseup="showIssue($event)">
    <issue-card-inner
      :list="list"
      :issue="issue"
      :issue-link-base="issueLinkBase"
      :root-path="rootPath"
      :update-filters="true" />
  </li>
</template>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script>
import "./issue_card_inner";
import eventHub from "../eventhub";

const Store = gl.issueBoards.BoardsStore;

export default {
  name: "BoardsIssueCard",
  components: {
    "issue-card-inner": gl.issueBoards.IssueCardInner,
  },
  props: {
    list: Object,
    issue: Object,
    issueLinkBase: String,
    disabled: Boolean,
    index: Number,
    rootPath: String,
  },
  data() {
    return {
      showDetail: false,
      detailIssue: Store.detail,
    };
  },
  computed: {
    issueDetailVisible() {
      return (
        this.detailIssue.issue && this.detailIssue.issue.id === this.issue.id
      );
    },
  },
  methods: {
    mouseDown() {
      this.showDetail = true;
    },
    mouseMove() {
      this.showDetail = false;
    },
    showIssue(e) {
      if (e.target.classList.contains("js-no-trigger")) return;

      if (this.showDetail) {
        this.showDetail = false;

        if (Store.detail.issue && Store.detail.issue.id === this.issue.id) {
          eventHub.$emit("clearDetailIssue");
        } else {
          eventHub.$emit("newDetailIssue", this.issue);
          Store.detail.list = this.list;
        }
      }
    },
  },
};
</script>

<template>
  <li
    class="card"
    :class="{
      'user-can-drag': !disabled && issue.id,
      'is-disabled': disabled || !issue.id,
      'is-active': issueDetailVisible,
    }"
    :index="index"
    :data-issue-id="issue.id"
    @mousedown="mouseDown"
    @mousemove="mouseMove"
    @mouseup="showIssue($event);"
  >
    <issue-card-inner
      :list="list"
      :issue="issue"
      :issue-link-base="issueLinkBase"
      :root-path="rootPath"
      :update-filters="true"
    />
  </li>
</template>

`;

exports[`interpolations.vue - vue-verify 1`] = `
<div>Fuga magnam facilis. Voluptatem quaerat porro.{{


x => {
    const hello = 'world'
    return hello;
}



}} Magni consectetur in et molestias neque esse voluptatibus voluptas. {{  
    
    
    some_variable 



}} Eum quia nihil nulla esse. Dolorem asperiores vero est error {{

                    preserve

                    invalid
                    
                    interpolation

}} reprehenderit voluptates minus {{console.log(  short_interpolation )}} nemo.</div>

<script type="text/jsx">
  export default {
    render (h) {
      return (
        <ul
          class={{
            'a': b,
            'c': d,
            "e": f
          }}
        >
          { this.xyz }
        </ul>
    )
  };
</script>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  Fuga magnam facilis. Voluptatem quaerat porro.{{
    x => {
      const hello = "world";
      return hello;
    }
  }}
  Magni consectetur in et molestias neque esse voluptatibus voluptas.
  {{some_variable}} Eum quia nihil nulla esse. Dolorem asperiores vero est error
  {{

                    preserve

                    invalid
                    
                    interpolation

  }}
  reprehenderit voluptates minus {{console.log(short_interpolation)}} nemo.
</div>

<script type="text/jsx">
export default {
  render (h) {
    return (
      <ul
        class={{
          'a': b,
          'c': d,
          "e": f
        }}
      >
        { this.xyz }
      </ul>
  )
};
</script>

`;

exports[`interpolations.vue - vue-verify 2`] = `
<div>Fuga magnam facilis. Voluptatem quaerat porro.{{


x => {
    const hello = 'world'
    return hello;
}



}} Magni consectetur in et molestias neque esse voluptatibus voluptas. {{  
    
    
    some_variable 



}} Eum quia nihil nulla esse. Dolorem asperiores vero est error {{

                    preserve

                    invalid
                    
                    interpolation

}} reprehenderit voluptates minus {{console.log(  short_interpolation )}} nemo.</div>

<script type="text/jsx">
  export default {
    render (h) {
      return (
        <ul
          class={{
            'a': b,
            'c': d,
            "e": f
          }}
        >
          { this.xyz }
        </ul>
    )
  };
</script>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  Fuga magnam facilis. Voluptatem quaerat porro.{{
    x => {
      const hello = "world";
      return hello;
    }
  }}
  Magni consectetur in et molestias neque esse voluptatibus voluptas.
  {{some_variable}} Eum quia nihil nulla esse. Dolorem asperiores vero est error
  {{

                    preserve

                    invalid
                    
                    interpolation

  }}
  reprehenderit voluptates minus {{console.log(short_interpolation)}} nemo.
</div>

<script type="text/jsx">
export default {
  render (h) {
    return (
      <ul
        class={{
          'a': b,
          'c': d,
          "e": f
        }}
      >
        { this.xyz }
      </ul>
  )
};
</script>

`;

exports[`script_src.vue - vue-verify 1`] = `
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>

`;

exports[`script_src.vue - vue-verify 2`] = `
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>

`;

exports[`self_closing.vue - vue-verify 1`] = `
<template>
  <div />
</template>

<script>
foo( )
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
  <div />
</template>

<script>
foo();
</script>

`;

exports[`self_closing.vue - vue-verify 2`] = `
<template>
  <div />
</template>

<script>
foo( )
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
  <div />
</template>

<script>
foo();
</script>

`;

exports[`self_closing_style.vue - vue-verify 1`] = `
<template>
  <span :class="$style.root"><slot /></span>
</template>

<style src="./style.css" module />
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
  <span :class="$style.root"><slot /></span>
</template>

<style src="./style.css" module />

`;

exports[`self_closing_style.vue - vue-verify 2`] = `
<template>
  <span :class="$style.root"><slot /></span>
</template>

<style src="./style.css" module />
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
  <span :class="$style.root"><slot /></span>
</template>

<style src="./style.css" module />

`;

exports[`test.vue - vue-verify 1`] = `
<script>
</script>

<template>
  <br />
  <footer>
    foo
    <br/>
  </footer>
</template>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script></script>

<template>
  <br />
  <footer>foo <br /></footer>
</template>

`;

exports[`test.vue - vue-verify 2`] = `
<script>
</script>

<template>
  <br />
  <footer>
    foo
    <br/>
  </footer>
</template>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script></script>

<template>
  <br />
  <footer>foo <br /></footer>
</template>

`;
